# RePic

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  screenshot_feature.md  server.js  spec.md  vite.config.js
.github/workflows/: release.yml
docs/: BUG-REPORT-001.md  ROADMAP.md  SPEC-002-optimization.md  SPEC-005-scroll-wheel-zoom.md  SPEC.md  index.html  intro.html  virtual-image-spec.md
docs/specs/: virtual-image-spec.md
electron/: main.cjs  preload.cjs
scraper/: go.mod  main.go
scripts/: embed-repic-thumbs.cjs  install-thumb-handler.ps1  post-build.cjs  remove-background.js
shell/repic-thumbs/: Cargo.toml
shell/repic-thumbs/.cargo/: config.toml
shell/repic-thumbs/src/: lib.rs
src/: App.jsx  index.css  main.jsx
src/components/album/: ThumbnailGrid.jsx  ThumbnailGridCell.jsx
src/components/icons/: Copy.jsx  Grid3x3.jsx  Pencil.jsx  Upload.jsx  index.js
src/components/ui/: AboutDialog.jsx  BatchCropModal.jsx  Button.jsx  ConfirmDialog.jsx  ContextMenu.jsx  ExportVirtualDialog.jsx  FloatingToolbar.jsx  InfoPanel.jsx  LazyImage.jsx  SaveToolbar.jsx  Sidebar.jsx  Slider.jsx  TopBar.jsx  UploadHistoryPanel.jsx
src/constants/: drawing.js
src/contexts/: ThemeContext.jsx
src/features/album/: AlbumSidebar.jsx
src/hooks/: useConfirmDialog.js  useFileSystem.js  useI18n.js  useLetMeUse.js  usePokkit.js  useWebAlbums.js
src/i18n/: I18nContext.jsx
src/i18n/locales/: en.json  (+1 more)
src/lib/: pokkitApi.js
src/utils/: capture.js  imageLoader.js  imageUtils.js  prefetchManager.js  repicFile.js  upload.js
(+12 files in other folders)
