[package]
name = "repic-thumbs"
version = "0.1.0"
edition = "2021"
description = "Windows shell thumbnail handler for .repic virtual image files"

[lib]
name = "repic_thumbs"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
serde_json = "1"
windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_Common",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
